--- a/src/components/PageSection/PageSection.module.scss
+++ b/src/components/PageSection/PageSection.module.scss
@@ -3,12 +3,14 @@
   width: 100%;
 
   img {
-    pointer-events: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    object-fit: cover;
+    &.bg-img {
+      pointer-events: none;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
   }
 
   .content {
