--- a/src/components/MainConceptArtPageSection/MainConceptArtPageSection.module.scss
+++ b/src/components/MainConceptArtPageSection/MainConceptArtPageSection.module.scss
@@ -1,4 +1,15 @@
 .container {
   height: 100vh;
   position: relative;
+
+  img {
+    &.bg-img {
+      pointer-events: none;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+  }
 }
