--- a/src/pages/sections/walletIntroSection/WalletIntroSection.module.scss
+++ b/src/pages/sections/walletIntroSection/WalletIntroSection.module.scss
@@ -1,6 +1,6 @@
-@import "../../styles/colors";
+@import "../../../styles/colors";
 
-.game-intro-section {
+.wallet-intro-section {
   background-color: $primary;
   display: flex;
   align-items: center;
