--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,3 +8,6 @@ $factionIndustrial: #932b28;
 $factionEco: #4d7937;
 $factionTech: #2f64b2;
 $factionTraditional: #c09c11;
+
+// Colors
+$blue: #4b6ecd;
