--- a/src/components/TeamMember/TeamMember.module.scss
+++ b/src/components/TeamMember/TeamMember.module.scss
@@ -13,7 +13,7 @@
       position: relative;
       width: 6rem;
 
-      .team-member__avatar {
+      .team-member-avatar {
         position: absolute;
         left: 0;
         top: 4rem;
@@ -26,13 +26,13 @@
           transform: translateX(-50%);
         }
 
-        &.team-member__avatar--right {
+        &.team-member-avatar--right {
           left: unset;
           right: 0;
         }
       }
 
-      .team-member__info {
+      .team-member-info {
         margin-top: 0;
 
         img {
@@ -59,19 +59,19 @@
       padding: 0 1rem 1rem 1rem;
       cursor: default;
 
-      .team-member__info {
-        .team-member__bio {
+      .team-member-info {
+        .team-member-bio {
           display: block;
         }
       }
 
-      .team-member__avatar {
+      .team-member-avatar {
         img {
           top: -4.8rem;
         }
       }
 
-      .team-member__close-btn {
+      .team-member-close-btn {
         position: absolute;
         top: -0.5rem;
         right: 0rem;
@@ -84,7 +84,7 @@
       }
     }
 
-    .team-member__avatar {
+    .team-member-avatar {
       position: relative;
 
       img {
@@ -96,11 +96,11 @@
       }
     }
 
-    .team-member__info {
+    .team-member-info {
       text-align: center;
       margin-top: 2rem;
 
-      .team-member__info-name {
+      .team-member-info-name {
         p {
           font-size: 1.2rem;
           line-height: 1rem;
@@ -108,7 +108,7 @@
         }
       }
 
-      .team-member__info-role {
+      .team-member-info-role {
         p {
           color: $blue;
           line-height: 1rem;
@@ -116,7 +116,7 @@
         }
       }
 
-      .team-member__social {
+      .team-member-social {
         ul {
           display: flex;
 
@@ -128,7 +128,7 @@
         }
       }
 
-      .team-member__bio {
+      .team-member-bio {
         display: none;
         transition: 0.2s ease-in-out;
 
@@ -158,7 +158,7 @@
   height: 100vh;
   z-index: 900;
 
-  .team-member-modal__overlay {
+  .team-member-modal-overlay {
     position: absolute;
     top: 0;
     left: 0;
