--- a/src/sections/tokenomicsSection/TokenomicsSection.module.scss
+++ b/src/sections/tokenomicsSection/TokenomicsSection.module.scss
@@ -1,12 +1,13 @@
 @import "../../styles/colors";
 
-.wallet-intro-section {
+.container {
   background-color: $primary;
   display: flex;
   align-items: center;
   justify-content: center;
 
   .info {
+    padding-right: 2rem;
     h3 {
       color: white;
       margin-bottom: 0;
