--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,10 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
+
+  @media (max-width: 480px) {
+    font-size: 12px;
+  }
 }
 
 // ---------- Buttons ----------
