--- a/src/components/PageSection/PageSection.module.scss
+++ b/src/components/PageSection/PageSection.module.scss
@@ -2,6 +2,10 @@
   height: 100vh;
   width: 100%;
 
+  @media (max-width: 480px) {
+    padding: 0 1rem;
+  }
+
   .bg-img {
     pointer-events: none;
     position: absolute;
