--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -33,6 +33,12 @@
     font-size: 5rem;
     text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.7);
     color: white;
+
+    @media (max-width: 480px) {
+      font-size: 3.5rem;
+      width: 100%;
+      text-align: center;
+    }
   }
 }
 
@@ -66,6 +72,15 @@
     p {
       color: white;
       margin-top: 1rem;
+    }
+  }
+
+  .whitepaper-image {
+    @media (max-width: 480px) {
+      img {
+        width: 70%;
+        margin: 0 auto;
+      }
     }
   }
 }
