--- a/src/sections/teamSection/TeamSection.module.scss
+++ b/src/sections/teamSection/TeamSection.module.scss
@@ -13,6 +13,11 @@
     transform: translateX(-50%);
     color: white;
     text-align: center;
+
+    @media (max-width: 480px) {
+      top: 2rem;
+      width: 100%;
+    }
   }
 
   h2 {
@@ -23,6 +28,11 @@
     color: white;
     text-align: center;
     margin-bottom: 4rem;
+
+    @media (max-width: 480px) {
+      top: 4.5rem;
+      width: 100%;
+    }
   }
 
   .team-container {
@@ -41,5 +51,9 @@
       padding: 0 5rem 0 7rem;
       margin-top: 0rem;
     }
+  }
+
+  @media (max-width: 480px) {
+    padding: 0;
   }
 }
