--- a/src/components/PageSection/PageSection.module.scss
+++ b/src/components/PageSection/PageSection.module.scss
@@ -2,6 +2,12 @@
   height: 100vh;
   width: 100%;
 
+  .content {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+  }
+
   @media (max-width: 480px) {
     padding: 0 1rem;
   }
@@ -11,7 +17,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 1;
     object-fit: cover;
   }
 }
