--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -121,7 +121,7 @@ h3 {
 }
 
 p {
-  font-family: "Barlow Condensed";
+  font-family: "Barlow Semi Condensed";
   font-weight: 300;
   font-style: normal;
   font-size: 1.3rem;
