--- a/src/components/PageSection/PageSectionColumns.module.scss
+++ b/src/components/PageSection/PageSectionColumns.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 
   .info {
     h3 {
@@ -17,6 +18,7 @@
       margin-top: 1rem;
       color: white;
       font-family: "Barlow Semi Condensed";
+      max-width: 85%;
     }
 
     .button {
