--- a/src/components/PageSection/PageSectionImageCenter.module.scss
+++ b/src/components/PageSection/PageSectionImageCenter.module.scss
@@ -4,9 +4,12 @@
 
   h1 {
     color: white;
+    text-align: center;
   }
 
   h2 {
     color: white;
+    text-align: center;
+    max-width: 75%;
   }
 }
