--- a/src/sections/tokenomicsSection/TokenomicsSection.module.scss
+++ b/src/sections/tokenomicsSection/TokenomicsSection.module.scss
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
+  height: 100%;
+  min-height: 100vh;
 
   .info {
     padding-right: 2rem;
