--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     padding: 2rem 0;
+    overflow: hidden;
 
     @media (max-width: 480px) {
       justify-content: center;
