--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -34,7 +34,7 @@
   .nav-mint {
     position: relative;
     background-color: rgba(23, 23, 36, 0.6);
-    width: 100%;
+    width: 100vw;
     height: 4rem;
     transition: 0.2s ease-in-out;
 
