--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -48,6 +48,10 @@
       .mint-button {
         top: 0;
       }
+
+      .mint-light {
+        opacity: 0;
+      }
     }
 
     .mint-message {
