mint section update

--- a/src/sections/MintSection/MintSection.module.scss
+++ b/src/sections/MintSection/MintSection.module.scss
@@ -1,4 +1,17 @@
+@import "../../styles/colors";
+
 .container {
-  .ship {
+  background-color: rgba(31, 32, 50, 0.5);
+  height: 60vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+
+  h1 {
+    position: absolute;
+    top: 4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
   }
 }
