--- a/src/components/PageSection/PageSection.module.scss
+++ b/src/components/PageSection/PageSection.module.scss
@@ -1,35 +1,36 @@
 .container {
   height: 100vh;
-  max-height: 100vh;
   width: 100%;
   position: relative;
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-sizing: content-box;
 
   .heading {
-    z-index: 10;
-    width: 100%;
     height: 20%;
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    flex-direction: column;
+    z-index: 10;
+    padding: 6rem 1rem 0 1rem;
 
     h1 {
       text-align: center;
       color: white;
+      margin: 0;
     }
 
     h2 {
       color: white;
       text-align: center;
+      margin: 0;
     }
   }
 
   .content {
     z-index: 2;
     width: 100%;
-    height: 100% !important;
 
     button {
       margin-top: 1rem;
