--- a/src/pages/game_style.module.scss
+++ b/src/pages/game_style.module.scss
@@ -1,3 +1,5 @@
+// ** NAME OF THIS FILE IS DIFFERENT BECAUSE OF WEIRD PROBLEM WITH PUBLISHING **
+
 .container {
   .top-section {
     position: relative;
@@ -15,6 +17,12 @@
       text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.7);
       color: white;
       text-align: center !important;
+      width: 100%;
+
+      @media (max-width: 1500px) {
+        font-size: 6rem;
+        line-height: 6rem;
+      }
 
       @media (max-width: 480px) {
         font-size: 4rem;
@@ -25,35 +33,43 @@
     }
   }
 
-  .play-to-earn-section {
+  .column-section {
     position: relative;
     height: 100%;
     width: 100%;
     min-height: 100vh;
+
+    @media (max-width: 480px) {
+    }
+
+    @media (min-width: 400px) and (max-width: 480px) {
+      min-height: 70vh !important;
+      max-height: 70vh !important;
+      display: flex;
+      align-items: center;
+    }
   }
 
-  .for-section {
+  .vertical-section {
     position: relative;
     height: 100%;
     width: 100%;
     min-height: 100vh;
-  }
 
-  .integrated-wallet-section {
-    position: relative;
-    height: 100%;
-    width: 100%;
+    @media (max-width: 480px) {
+    }
+
+    @media (min-width: 400px) and (max-width: 480px) {
+      min-height: 70vh !important;
+      max-height: 70vh !important;
+      display: flex;
+      align-items: center;
+    }
   }
 
   .gameplay-types-section {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    min-height: 100vh;
-    z-index: 100;
-  }
-
-  .defi-empire-section {
-    min-height: 100vh;
+    background-image: url("/images/bg/bg_gameplay_types_mobile.webp") !important;
+    background-position: center center;
+    background-size: cover;
   }
 }
